--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - static:/usr/src/app/static
       - store:/usr/src/app/var/store
   celery:
-    image: uwaedu/mytardis_django:uwa.3.9.0
+    image: monashmerc/mytardis_django:4.0-RC9
     command: --loglevel=DEBUG --autoreload
     environment:
       - CELERY_ENABLE=True
@@ -53,7 +53,7 @@ services:
       - staging:/usr/src/app/var/staging
       - store:/usr/src/app/var/store
   beat:
-    image: uwaedu/mytardis_django:uwa.3.9.0
+    image: monashmerc/mytardis_django:4.0-RC9
     environment:
       - CELERY_ENABLE=beat
       - MYTARDIS_BIOFORMATS_ENABLE=False
@@ -68,7 +68,7 @@ services:
       - staging:/usr/src/app/var/staging
       - store:/usr/src/app/var/store
   other:
-    image: uwaedu/mytardis_django:uwa.3.9.0
+    image: monashmerc/mytardis_django:4.0-RC9
     command: ["tail","-f","/dev/null",]
     environment:
       - GUNICORN_ENABLE=False
