--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,9 +99,8 @@ services:
     volumes:
       - static:/usr/src/app/static/:ro
       - ./mysite.template:/etc/nginx/conf.d/mysite.template
-    environment:
-      - NGINX_HOST=mytardis.example.com
-      - NGINX_PORT=80
+    env_file:
+      - env.NGINX
     command: /bin/bash -c "envsubst < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     mem_limit: 500m
   haproxy:
