Specifying the branch for the mydata submodule might help to ensure that "git submodule update" updates it to the latest version. If not, we might need to specify the commit hash in .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,7 @@
 [submodule "src/mydata"]
 	path = src/mydata
 	url = https://github.com/mytardis/mytardis-app-mydata.git
+	branch = master
 [submodule "src/nifcert"]
 	path = src/nifcert
 	url = https://github.com/UWA-FoS/mytardis-nifcert.git
