Set default log levels to INFO (not DEBUG) to avoid ugly exceptions saying that Django templates couldn't find variables we don't care about and set Django's DEBUG setting to default to True, as this fork of docker-mytardis is currently intended for training, not for production, i.e. we don't want people to have to configure email settings to email 500 errors to server admins during training - it's OK for 500 errors to appear in the browser, for a local test/devel instance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,10 @@ services:
       - DJANGO_ALLOWED_HOSTS=['*']
       - DJANGO_DATETIME_FORMAT='jS F Y H:i'
       - DJANGO_DATE_FORMAT='jS F Y'
-      - DJANGO_DEBUG=False
+      - DJANGO_DEBUG=True
       - DJANGO_DEFAULT_FROM_EMAIL='donotreply-mytardis@example.com'
       - DJANGO_EMAIL_SUBJECT_PREFIX="[MyTardis]:"
-      - DJANGO_LOG_LEVEL=DEBUG
+      - DJANGO_LOG_LEVEL=INFO
       - DJANGO_SECURE_PROXY_SSL_HEADER=('HTTP_X_FORWARDED_PROTO', 'https')
       - GUNICORN_WORKER_CLASS=gevent
       - MYTARDIS_BIOFORMATS_ENABLE=False
@@ -38,10 +38,10 @@ services:
       - store:/usr/src/app/var/store
   celery:
     image: monashmerc/mytardis_django:4.0-RC10
-    command: -A tardis.celery.tardis_app --loglevel=DEBUG --autoreload
+    command: -A tardis.celery.tardis_app --loglevel=INFO --autoreload
     environment:
       - CELERY_ENABLE=True
-      - DJANGO_LOG_LEVEL=DEBUG
+      - DJANGO_LOG_LEVEL=INFO
       - MYTARDIS_BIOFORMATS_ENABLE=False
       - MYTARDIS_NIFCERT_ENABLE=False
       - DJANGO_SETTINGS_MODULE=tardis.settings
